--- a/education/templates/500.html
+++ b/education/templates/500.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>500</title>
-	<link rel="stylesheet" type="text/css" href="/static/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="/static/css/animate.css">
-	<link rel="stylesheet" type="text/css" href="/static/css/style.css">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/reset.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/animate.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 	<script type="text/javascript" src="/static/js/jquery.min.js"></script>
 </head>
 <body class="bg503 errorpage">
