--- a/education/templates/org-detail-homepage.html
+++ b/education/templates/org-detail-homepage.html
@@ -6,9 +6,9 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" >
 	<title>机构首页</title>
-	<link rel="stylesheet" type="text/css" href="/static/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="/static/css/animate.css">
-	<link rel="stylesheet" type="text/css" href="/static/css/style.css">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/reset.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/animate.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" type="text/css" href="/static/js/plugins/queryCity/css/cityLayout.css">
     
     <script src="/static/js/jquery.min.js" type="text/javascript"></script>
@@ -25,8 +25,8 @@
 					<div class="fl">
                         <p>联系方式：<b>3333333333</b></p>
                     </div>
-                    <a style="color:white" class="fr registerbtn" href="register.html">注册</a>
-                    <a style="color:white" class="fr loginbtn" href="login.html">登录</a>
+                    <a style="color:white" class="fr registerbtn" href="{% url 'register' %}">注册</a>
+                    <a style="color:white" class="fr loginbtn" href="{% url 'login' %}">登录</a>
 				</div>
 			</div>
             
@@ -207,7 +207,7 @@ function add_fav(current_elem, fav_id, fav_type){
         success: function(data) {
             if(data.status == 'fail'){
                 if(data.msg == '用户未登录'){
-                    window.location.href="login.html";
+                    window.location.href="{% url 'login' %}";
                 }else{
                     alert(data.msg)
                 }
