--- a/education/templates/forgetpwd.html
+++ b/education/templates/forgetpwd.html
@@ -52,7 +52,7 @@
             <ul class="fr hd-bar">
                 <li>服务电话：<span>33333333</span></li>
                 <li><a href="{% url 'login' %}">[登录]</a></li>
-                <li class="active"><a href="/forgetpwd/">[忘记密码]</a></li>
+                <li class="active"><a href="{% url "register" %}">[注册]</a></li>
             </ul>
         </div>
     </div>
@@ -85,13 +85,13 @@
                     {% csrf_token %}
                     <div class="form-group marb20 ">
                         <label>帐&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;号</label>
-                        <input type="text" id="account" name="email" value="None" placeholder="邮箱"/>
+                        <input type="text" id="account" name="email" value="" placeholder="邮箱"/>
                     </div>
                     <div class="form-group captcha1 marb38">
                         <label>验&nbsp;证&nbsp;码</label>
                         {{ forget_form.captcha }}
                     </div>
-                    <div class="error btns" id="jsForgetTips"></div>
+                    <div class="error btns" id="jsForgetTips">{{ msg }}</div>
                     <input type="hidden" name="sms_type" value="1">
                     <input class="btn btn-green" id="jsFindPwdBtn" type="submit" value="提交"/>
                     <p class="form-p" style="bottom:40px;">您还可以<a href="{% url 'login' %}"> [直接登录]</a></p>
