--- a/education/templates/usercenter-base.html
+++ b/education/templates/usercenter-base.html
@@ -10,7 +10,9 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'css/animate.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'js/plugins/queryCity/css/cityLayout.css' %}">
-    
+     <link rel="apple-touch-icon" href="/s/img/icon-touch.e4872c4da341.png">
+    <link rel="icon" sizes="192x192" href="/s/img/icon-touch.e4872c4da341.png">
+    <link rel="shortcut icon" href="/s/img/favicon.6dbf28c0650e.ico">
     <link rel="stylesheet" type="text/css" href="{% static 'css/lq.datetimepick.css' %}"/>
 
 {% block custom_css %}
@@ -27,7 +29,7 @@
 				<div class="wp">
 					<div class="fl"><p>服务电话：<b>33333333</b></p></div>
 					<!--登录后跳转-->
-                    
+
                         {% if request.user.is_authenticated %}
                         <div class="personal">
                             <dl class="user fr">
@@ -55,16 +57,15 @@
                         <a style="color:white" class="fr registerbtn" href="{% url 'register' %}">注册</a>
                         <a style="color:white" class="fr loginbtn" href="{% url 'login' %}">登录</a>
                     {% endif %}
-                    
+
 				</div>
 			</div>
-            
-    <div class="middle">
-        <div class="wp">
-            <a href="/"><img class="fl" src="/static/images/logo2.png"/></a>
-            <h1>我的慕学网</h1>
-        </div>
-    </div>
+
+            <div class="middle">
+                <div class="wp">
+                    <a href="/"><img class="fl" src="/static/images/logo2.png"/></a>
+                </div>
+            </div>
 			</div>
     </header>
 </section>
@@ -83,6 +84,8 @@
 	</div>
 </section>
 {% endblock %}
+
+
 <section>
 	<div class="wp list personal_list">
 	<div class="left">
@@ -99,64 +102,6 @@
 	</div>
 
     {% block right_content %}
-    <div class="right">
-		<div class="personal_des ">
-			<div class="head" style="border:1px solid #eaeaea;">
-				<h1>个人信息</h1>
-			</div>
-			<div class="inforcon">
-				<div class="left" style="width:242px;">
-                    <iframe id='frameFile' name='frameFile' style='display: none;'></iframe>
-                    <form class="clearfix" id="jsAvatarForm" enctype="multipart/form-data" autocomplete="off" method="post" action="/user/avatar/upload/" target='frameFile'>
-                        <label class="changearea" for="avatarUp">
-                            <span id="avatardiv" class="pic">
-                                <img width="100" height="100" class="js-img-show" id="avatarShow" src="/uploads/avatar/default_big.png"/>
-                            </span>
-                            <span class="fl upload-inp-box" style="margin-left:70px;">
-                                <span class="button btn-green btn-w100" id="jsAvatarBtn">修改头像</span>
-                                <input type="file" name="avatar_url" id="avatarUp" class="js-img-up"/>
-                            </span>
-                        </label>
-                        <input type='hidden' name='csrfmiddlewaretoken' value='sJcSi17mvC0dE06Qj4LH2i17uic2JOgy' />
-                    </form>
-                    <div style="border-top:1px solid #eaeaea;margin-top:30px;">
-                        <a class="button btn-green btn-w100" id="jsUserResetPwd" style="margin:80px auto;width:100px;">修改密码</a>
-                    </div>
-				</div>
-				<form class="perinform" id="jsEditUserForm" autocomplete="off">
-					<ul class="right">
-						<li>昵&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;称：
-                           <input type="text" name="nick_name" id="nick_name" value="管理员" maxlength="10">
-                            <i class="error-tips"></i>
-                        </li>
-						<li>生&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;日：
-                           <input type="text" id="birth_day" name="birday" value="2016-03-10" readonly="readonly"/>
-                            <i class="error-tips"></i>
-						</li>
-						<li>性&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;别：
-							<label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="radio"  name="gender" value="male" checked="checked">男</label>
-							<label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="radio" name="gender" value="female" >女</label>
-						</li>
-						<li class="p_infor_city">地&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;址：
-                            <input type="text" name="address" id="nick_name" placeholder="请输入你的地址" maxlength="10">
-						    <i class="error-tips"></i>
-                        </li>
-						<li>手&nbsp;&nbsp;机&nbsp;&nbsp;号：
-                            <input type="text" name="mobile" id="mobile" placeholder="请输入你的手机号码" maxlength="10">
-                        </li>
-                        <li>邮&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;箱：
-                        	<input class="borderno" type="text" name="email" readonly="readonly" value="admin@admin.com"/>
-                            <span class="green changeemai_btn">[修改]</span>
-                    	</li>
-						<li class="button heibtn">
-							<input type="button" id="jsEditUserBtn" value="保存">
-						</li>
-					</ul>
-                    {% csrf_token %}
-				</form>
-			</div>
-		</div>
-	</div>
     {% endblock %}
 
 	</div>
