--- a/education/templates/usercenter-info.html
+++ b/education/templates/usercenter-info.html
@@ -12,6 +12,21 @@
         </div>
     </section>
 {% endblock %}
+{% block left_tag %}
+    	<div class="left">
+        <ul>
+            <li class="active2"><a href="{% url 'users:user_info' %}">个人资料</a></li>
+            <li ><a href="{% url 'users:mycourse' %}">我的课程</a></li>
+            <li ><a href="{% url 'users:myfav_org' %}">我的收藏</a></li>
+            <li >
+                <a href="{% url 'users:mymessage' %}" style="position: relative;">
+                    我的消息
+                </a>
+            </li>
+        </ul>
+	</div>
+
+{% endblock %}
 {% block right_content %}
     <div class="right">
 		<div class="personal_des ">
